force-app/main/default/objects/Activity/fields/Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule__c</fullName>
    <label>Payroll Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Off-Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>