force-app/main/default/objects/Activity/fields/Payroll_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Date__c</fullName>
    <description>Date Payroll is Submitted</description>
    <inlineHelpText>Date Payroll is Submitted</inlineHelpText>
    <label>Payroll Submission Date</label>
    <type>Date</type>
</CustomField>