force-app/main/default/objects/Activity/fields/Referral_Update__c.field-meta.xml
<CustomField>
    <fullName>Referral_Update__c</fullName>
    <description>This field can be used to track any major changes or updates for a lead that has been referred to us by a partner sales rep.</description>
    <inlineHelpText>This field can be used to track updates for a referral lead from a partner sales rep. This field will be available in the applicable reports for partner updates. This field must be manually updated in the specific task in order for data to be up-to-date.</inlineHelpText>
    <label>Referral Update</label>
    <length>150</length>
    <type>Text</type>
</CustomField>