force-app/main/default/objects/Activity/fields/Reminder_Activity__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Activity</label>
    <type>Checkbox</type>
</CustomField>