force-app/main/default/objects/Activity/fields/Safe_Harbor_Notice__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe Harbor Notice</label>
    <type>Checkbox</type>
</CustomField>