force-app/main/default/objects/Activity/fields/Saving_Move_to_CY__c.field-meta.xml
<CustomField>
    <fullName>Saving_Move_to_CY__c</fullName>
    <description>MStar Fees - Estimated CY Fees</description>
    <formula>Current_MStar_Fees__c -  Estimated_CY_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MStar Fees - Estimated CY Fees</inlineHelpText>
    <label>Savings from Moving to CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>