force-app/main/default/objects/Activity/fields/Stamped_Complete__c.field-meta.xml
<CustomField>
    <fullName>Stamped_Complete__c</fullName>
    <description>Field stamped the moment the task is marked as complete by a member of the sales team</description>
    <label>Stamped Complete</label>
    <type>DateTime</type>
</CustomField>