force-app/main/default/objects/Activity/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Call Start Time formula</description>
    <formula>IF( BEGINS( Subject , &quot;Call Inbound &quot;) ,  RIGHT( Subject , 8) ,  RIGHT( Subject , 8) )</formula>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>