force-app/main/default/objects/Activity/fields/Task_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Task_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task ID (18 Char)</label>
    <type>Text</type>
</CustomField>