force-app/main/default/objects/Activity/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <description>What team member is logging this activity?</description>
    <inlineHelpText>What team member is logging this activity?</inlineHelpText>
    <label>Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron Fekete</fullName>
            </value>
            <value>
                <fullName>Barak Cowling</fullName>
                <isActive>false</isActive>
                <label>Barak Cowling</label>
            </value>
            <value>
                <fullName>Bernard</fullName>
                <isActive>false</isActive>
                <label>Bernard</label>
            </value>
            <value>
                <fullName>Bhavesh Patel</fullName>
                <isActive>false</isActive>
                <label>Bhavesh Patel</label>
            </value>
            <value>
                <fullName>Brandon</fullName>
                <isActive>false</isActive>
                <label>Brandon</label>
            </value>
            <value>
                <fullName>Brian Britt</fullName>
            </value>
            <value>
                <fullName>Chester R.</fullName>
                <isActive>false</isActive>
                <label>Chester R.</label>
            </value>
            <value>
                <fullName>Darren Sample</fullName>
                <isActive>false</isActive>
                <label>Darren Sample</label>
            </value>
            <value>
                <fullName>Davy</fullName>
            </value>
            <value>
                <fullName>Estee Hayes</fullName>
            </value>
            <value>
                <fullName>Gavin</fullName>
                <isActive>false</isActive>
                <label>Gavin</label>
            </value>
            <value>
                <fullName>Georgia Panosellis</fullName>
                <isActive>false</isActive>
                <label>Georgia Panosellis</label>
            </value>
            <value>
                <fullName>Janine L.</fullName>
            </value>
            <value>
                <fullName>Joel E.</fullName>
            </value>
            <value>
                <fullName>John C.</fullName>
            </value>
            <value>
                <fullName>Katie Check</fullName>
                <isActive>false</isActive>
                <label>Katie Check</label>
            </value>
            <value>
                <fullName>Kristen Cornell</fullName>
            </value>
            <value>
                <fullName>Liz Ohlhausen</fullName>
            </value>
            <value>
                <fullName>Mandy Lantz</fullName>
            </value>
            <value>
                <fullName>Meli</fullName>
            </value>
            <value>
                <fullName>Melissa Srica</fullName>
            </value>
            <value>
                <fullName>Mich</fullName>
            </value>
            <value>
                <fullName>Pattie Parisi</fullName>
            </value>
            <value>
                <fullName>Rosie Teves</fullName>
            </value>
            <value>
                <fullName>Shanna Wu</fullName>
                <isActive>false</isActive>
                <label>Shanna Wu</label>
            </value>
            <value>
                <fullName>Shawn</fullName>
                <isActive>false</isActive>
                <label>Shawn</label>
            </value>
            <value>
                <fullName>Shelley Burguieres</fullName>
            </value>
            <value>
                <fullName>Sonia Boily</fullName>
            </value>
            <value>
                <fullName>Stormy Bearry</fullName>
            </value>
            <value>
                <fullName>Sue Cascio</fullName>
                <isActive>false</isActive>
                <label>Sue Cascio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>