force-app/main/default/objects/Activity/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <formula>TIMEVALUE(Created_Date_Time__c )</formula>
    <label>Time of Day</label>
    <type>Time</type>
</CustomField>