force-app/main/default/objects/Activity/fields/Total_Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Plan_Balance__c</fullName>
    <description>Total Plan Balance as of July 2019</description>
    <inlineHelpText>Total Plan Balance as of July 2019</inlineHelpText>
    <label>Total Plan Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>