force-app/main/default/objects/Activity/fields/ViewasaWebPage__c.field-meta.xml
<CustomField>
    <fullName>ViewasaWebPage__c</fullName>
    <label>View as a Web Page</label>
    <type>Url</type>
</CustomField>