force-app/main/default/objects/Activity/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <description>Formula Field that returns Weekday based on Created Date</description>
    <formula>CASE(WEEKDAY(DATEVALUE( Created_Date_Time__c )), 
1,&quot;Sunday&quot;, 
2,&quot;Monday&quot;, 
3,&quot;Tuesday&quot;, 
4,&quot;Wednesday&quot;, 
5,&quot;Thursday&quot;, 
6,&quot;Friday&quot;, 
7,&quot;Saturday&quot;, 
&quot;&quot;)</formula>
    <inlineHelpText>Formula Field that returns Weekday based on Created Date</inlineHelpText>
    <label>Weekday</label>
    <type>Text</type>
</CustomField>